Game is working