@@ -1,4 +1,7 @@
+import java.awt.*;
+import java.sql.Array;
 import java.util.ArrayList;
+import java.util.Map;
 
 public class Model {
 
@@ -105,7 +108,7 @@ public class Model {
 
     void removeCar(){
         if (!allCars.isEmpty()){
-            allCars.removeLast();
+            allCars.remove(allCars.size()-1);
         }
     }
 
@@ -138,7 +141,7 @@ public class Model {
     }
 
     private void garageCollision(Car car, Garage garage){
-        if(Math.abs(car.getY() - garage.getY()) <= 50){
+        if((Math.abs(car.getY() - garage.getY()) <= 50) && (Math.abs(car.getX() - garage.getX()) <= 50)){
             if(!garage.getVehiclesStored().contains(car)) {
                 System.out.println("Successfully loaded VOLVO <3");
             }
